1. docker build add image.